RESOLVED FIXED 262897
Regression (266514@main) Pages keep crashing when certain extensions are enabled
https://bugs.webkit.org/show_bug.cgi?id=262897
Summary Regression (266514@main) Pages keep crashing when certain extensions are enabled
Chris Dumez
Reported 2023-10-09 10:19:29 PDT
Pages keep crashing when certain extensions are enabled since 266514@main: ``` [com.apple.WebKit:IPC] Received an invalid message 'WebPage_GetFrameInfoReply' from the WebContent process with PID 47502 ```
Attachments
Chris Dumez
Comment 1 2023-10-09 10:19:37 PDT
Chris Dumez
Comment 2 2023-10-09 10:24:20 PDT
EWS
Comment 3 2023-10-09 15:50:42 PDT
Committed 269118@main (f56555e255d1): <https://commits.webkit.org/269118@main> Reviewed commits have been landed. Closing PR #18846 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.