Tools/TestWebKitAPI/Tests/WebKitCocoa/WKWebViewEvaluateJavaScript.mm
@@ -330,6 +330,34 @@ TEST(WKWebView, EvaluateJavaScriptInWorldsWithGlobalObjectAvailableInCrossOrigin
     TestWebKitAPI::Util::run(&done);
 }
 
+TEST(WebKit, GetFrameInfo_detachedFrame)
+{
+    auto webView = adoptNS([TestWKWebView new]);
+    [webView synchronouslyLoadHTMLString:@"<iframe id='testFrame' src='about:blank'></iframe>"];
+
+    __block bool done = false;
+    [webView _frames:^(_WKFrameTreeNode *mainFrame) {
+        EXPECT_EQ(mainFrame.childFrames.count, 1U);
+        done = true;
+    }];
+    TestWebKitAPI::Util::run(&done);
+    auto pid = [webView _webProcessIdentifier];
+
+    [webView evaluateJavaScript:@"document.getElementById('testFrame').remove();" completionHandler:nil];
+
+    __block bool hasChildFrame = true;
+    do {
+        done = false;
+        [webView _frames:^(_WKFrameTreeNode *mainFrame) {
+            hasChildFrame = mainFrame.childFrames.count > 0;
+            done = true;
+        }];
+        TestWebKitAPI::Util::run(&done);
+    } while (hasChildFrame);
+
+    EXPECT_EQ(pid, [webView _webProcessIdentifier]);
+}
+
 TEST(WebKit, EvaluateJavaScriptInAttachments)
 {
     // Attachments displayed inline are in sandboxed documents.
